# VeriCompute

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_HANDOFF.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEPLOY_SOROGP.md  PRD.md  README.md  TASKS.md  render.yaml
.cursor/rules/: stellar.mdc
.cursor/skills/stellar-builder/: SKILL.md  network-reference.md  patterns.md  security.md  workflows.md
.github/: copilot-instructions.md
.github/workflows/: build-wasm.yml  prove.yml
apps/web/: README.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/demo/: page.tsx
apps/web/app/how-it-works/: page.tsx
apps/web/components/: PipelineVisualizer.tsx  ResultPanel.tsx  RoadmapSection.tsx  ScoringForm.tsx  WalletConnect.tsx
apps/web/components/landing/: CTASection.tsx  FlowSection.tsx  HeroSection.tsx  TrustBar.tsx  (+4 more)
apps/web/lib/: contracts.ts  prover-client.ts  roadmap.ts  stellar.ts  types.ts
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/verifier/: README.md
deployments/: testnet.json.example
prover-microservice/: Dockerfile  README.md  docker-compose.yml  setup.sh  vericompute-prover.service
scripts/: check-prereqs.sh  deploy-testnet.sh  full-e2e.sh  fund-sac.sh  init-escrow.sh  install-stellar-cli.sh  prove.sh  setup-wsl.sh  sync-env-from-deployments.sh  test-escrow-flow.sh  vendor-verifier.sh  verify-proof-cli.sh
zk/host/: Cargo.toml
zk/host/examples/: sample_input.json
zk/host/src/: main.rs
zk/methods/: Cargo.toml
zk/methods/guest/: Cargo.toml
zk/methods/guest/src/: main.rs  scoring.rs
(+2 files in other folders)
