[package]
name = "vericompute-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.7", features = ["json"] }
bincode = "1.3.3"
clap = { version = "4.5.17", features = ["derive"] }
hex = "0.4.3"
risc0-ethereum-contracts = "3.0.1"
risc0-zkvm = { version = "3.0.4", features = ["prove"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
vericompute-methods = { path = "../methods" }
