[package]
name = "vericompute-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0.4", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
bincode = "1.3.3"
